[package]
name = "rurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
futures-util = "0.3.21"
pbr = "1.0.4"

[dependencies.reqwest]
version = "0.11.10"
features = ["json", "stream"]

[features]
